--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+langchain = "^0.2.11"
+openai = "^1.37.1"
+datasets = "^2.20.0"
+ragas = "^0.1.11"
 
 
 [build-system]
