--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Test RAGAS QA Generator
 
 on:
   push:
@@ -12,45 +12,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: rizzbuzz
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: rag_history_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        poetry install
+      - name: Install dependencies
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry install
 
-    - name: Build backend Docker image
-      run: docker-compose -f docker-compose.yml build backend
-
-    - name: Start services
-      run: docker-compose -f docker-compose.yml up -d
-
-    - name: Wait for services to be healthy
-      run: |
-        docker-compose -f docker-compose.yml exec -T backend bash -c "until nc -z localhost 8000; do sleep 1; done"
-
-    - name: Run tests
-      run: |
-        docker-compose -f docker-compose.yml exec backend pytest
+      - name: Run tests
+        run: |
+          python -m unittest discover -s tests -p '*_test.py'
