--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install poetry
+          python -m pip install poetry pandas
           poetry install
 
       - name: Run tests
