ci/cd/fix: run using poetry instead of internal python

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m unittest discover -s tests -p '*_test.py'
+          poetry run python -m unittest discover -s tests -p '*_test.py'
